--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
-packaging==24.2
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.0_1/libexec/wheel-0.44.0-py3-none-any.whl#sha256=f49b82715dce6365f75eddcb0a9bb47d0d46feaf14bbc739dfcbd677b7073f5b
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+attrs==25.3.0
+audioop-lts==0.2.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+discord==2.3.2
+discord.py==2.5.2
+frozenlist==1.5.0
+idna==3.10
+multidict==6.2.0
+propcache==0.3.0
+pycparser==2.22
+PyNaCl==1.5.0
+python-dotenv==1.1.0
+requests==2.32.3
+urllib3==2.3.0
+yarl==1.18.3
