--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
+APScheduler==3.11.0
 attrs==25.3.0
 audioop-lts==0.2.1
 blinker==1.9.0
@@ -22,6 +23,7 @@ pycparser==2.22
 PyNaCl==1.5.0
 python-dotenv==1.1.0
 requests==2.32.3
+tzlocal==5.3.1
 urllib3==2.3.0
 waitress==3.0.2
 Werkzeug==3.1.3
